--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
-    "puppeteer": "^1.10.0"
+    "puppeteer": "^1.10.0",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1"
   }
 }
